WexGit/Wex_DX/force-app/main/default/objects/Experian_BizID_Login__mdt/Experian_BizID_Login__mdt.object-meta.xml
<CustomObject>
    <label>Experian BizID Login</label>
    <pluralLabel>Experian BizID Login</pluralLabel>
</CustomObject>