WexGit/Wex_DX/force-app/main/default/objects/Experian_BizID_Login__mdt/fields/BizID_Public_Group__c.field-meta.xml
<CustomField>
    <fullName>BizID_Public_Group__c</fullName>
    <label>BizID Public Group</label>
    <length>15</length>
    <type>Text</type>
</CustomField>