WexGit/Wex_DX/force-app/main/default/objects/Experian_BizID_Login__mdt/fields/DBHost__c.field-meta.xml
<CustomField>
    <fullName>DBHost__c</fullName>
    <label>DBHost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>