WexGit/Wex_DX/force-app/main/default/objects/Experian_BizID_Login__mdt/fields/EAI__c.field-meta.xml
<CustomField>
    <fullName>EAI__c</fullName>
    <label>EAI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>