WexGit/Wex_DX/force-app/main/default/objects/Experian_BizID_Login__mdt/fields/OpInitials__c.field-meta.xml
<CustomField>
    <fullName>OpInitials__c</fullName>
    <label>OpInitials</label>
    <length>2</length>
    <type>Text</type>
</CustomField>