WexGit/Wex_DX/force-app/main/default/objects/Experian_BizID_Login__mdt/fields/Preamble__c.field-meta.xml
<CustomField>
    <fullName>Preamble__c</fullName>
    <label>Preamble</label>
    <length>4</length>
    <type>Text</type>
</CustomField>