WexGit/Wex_DX/force-app/main/default/objects/Experian_BizID_Login__mdt/fields/Subcode__c.field-meta.xml
<CustomField>
    <fullName>Subcode__c</fullName>
    <label>Subcode</label>
    <length>7</length>
    <type>Text</type>
</CustomField>