WexGit/Wex_DX/force-app/main/default/objects/Experian_BizID_Login__mdt/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User_ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>